@startuml
class Request{ }

interface Handler{
     ‌‌‌‌‍‍‌‌‌‌‌‌‍‍+  setNext(Handler handler);
     ‌‌‌‌‍‍‌‌‌‌‌‌‍‍+  handle(Request request);
}

class BaseHandler implements Handler{
    ‌#‌‌‌‍‍   Handler next;
    ‌‌‌‍‍‌‌‌‌‌‌‍‍+   setNext(Handler handler);
}

class AuthorizationHandler extends BaseHandler{

    ‌‌‌‌‍‍‌‌‌‌‌‌‍‍+   handle(Request request);
}

class AuthenticationHandler extends BaseHandler{

    ‌‌‌‌‍‍‌‌‌‌‌‌‍‍+   handle(Request request);
}

class OtherHandler extends BaseHandler{

    ‌‌‌‌‍‍‌‌‌‌‌‌‍‍+   handle(Request request);
}

class Client {
}

Client ..> Handler
Handler --> Handler
Handler ..> Request


@enduml